--- a/krichtexteditor/src/main/res/values/strings.xml
+++ b/krichtexteditor/src/main/res/values/strings.xml
@@ -13,9 +13,10 @@
     <string name="font_style_heading_3">Heading 3</string>
     <string name="font_insert">Insert</string>
     <string name="edit_hyperlink">Edit Hyperlink</string>
-    <string name="address">Address:</string>
+    <string name="url_address">URL:</string>
     <string name="text_to_display">Text to display:</string>
     <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
     <string name="edit_table">Edit Table</string>
     <string name="heading_4">Heading 4</string>
     <string name="heading_5">Heading 5</string>
